--- a/table_tag.htm
+++ b/table_tag.htm
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,11 +8,12 @@
 </head>
 <body>
     <table border="2" width="40%" align="center">
+        <caption style="caption-side: top;">Personal Information</caption>
         <thead>
-        <tr>
-            <th>Index</th>
-            <th>Name</th>
-            <th>Contact Info.</th>
+            <tr>
+                <th>Index</th>
+                <th>Name</th>
+                <th>Contact Info.</th>
         </tr>
         </thead>
 
@@ -82,7 +82,6 @@
         <li>align</li>
     </ol>
 </body>
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -160,5 +159,4 @@
         <li>valign</li>
     </ol>
 </body>
->>>>>>> d795cb7447280f303d092b33da12d3398b57c6fa
 </html>
