--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                         </td>
                         <td></td>
                         <td>
-                            <a href="#"><font face="calibri" color="#fff" size="5">Home</font></a>
+                            <a href="#navbar"><font face="calibri" color="#fff" size="5">Home</font></a>
                         </td>
                         <td>
                             <a href="#"><font face="calibri" color="#fff" size="5">About us</font></a>
                         </td>
                         <td>
-                            <a href="#"><font face="calibri" color="#fff" size="5">Services</font></a>
+                            <a href="#services"><font face="calibri" color="#fff" size="5">Services</font></a>
                         </td>
                         <td>
                             <a href="#"><font face="calibri" color="#fff" size="5">Achievements</font></a>
@@ -37,7 +37,7 @@
                             <a href="#"><font face="calibri" color="#fff" size="5">Testimonials</font></a>
                         </td>
                         <td>
-                            <a href="#"><font face="calibri" color="#fff" size="5">Contact Us</font></a>
+                            <a href="#contactus"><font face="calibri" color="#fff" size="5">Contact Us</font></a>
                         </td>
                     </tr>
                 </table>
